--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,9 +32,13 @@
         <li class="nav-item">
           <a class="nav-link" href="/signup">Registro</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="/profile">Profile</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar sesión</a>
-        </li>
+        </li>   
+
       </ul>
     </div>
   </nav>
