--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -13,6 +13,10 @@
                 <input name="password" type="password" class="form-control" id="field2">
                 <small class="form-text text-muted">Nunca compartas tu contraseña</small>
             </div>
+            <div class="form-group">
+                <label for="field3">Email:</label>
+                <input name="email" type="email" class="form-control" id="field3">
+            </div>
 
             <button type="submit" class="btn btn-dark btn-block btn-lg">Registrarme</button>
 
