--- a/views/profile/profile-edit.hbs
+++ b/views/profile/profile-edit.hbs
@@ -6,11 +6,11 @@
       <form action="/profile/edit/{{_id}}" method="post">
         <div class="form-group">
           <label for="name-input">Nombre de usuario</label>
-          <input name="username" type="text" class="form-control" id="name-input" value="{{username}}">
+          <input name="username" type="text" class="form-control" id="name-input" value="{{newUser.username}}">
         </div>
         <div class="form-group">
           <label for="description-input">Email</label>
-          <input name="email" type="email" class="form-control" id="description-input" value="{{email}}">
+          <input name="email" type="email" class="form-control" id="description-input" value="{{newUser.email}}">
         </div>
         <div class="form-group">
           <label for="inversions-input">Imagen de Perfil</label>
