--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -3,11 +3,12 @@
     <h1>Welcome,  {{username}}! </h1>
 
     <p>Email: {{email}}</p>
-    <p>Foto de Perfil{{profilePicPath}}</p>
+    <p>Foto de Perfil: </p>
+    <img src="{{profilePicPath}}">
     <p>Edad: {{age}}</p>
     <p>Dirección: {{address}}</p>
     <p>DNI: {{dni}}</p>
-    <p> Número de teléfono: {{phoneNumber}}</p>
+    <p>Número de teléfono: {{phoneNumber}}</p>
 
 
 <a href="/profile/edit/{{_id}}">Editar Usuario</a>
