--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,9 @@
           <a class="nav-link" href="/">Inicio</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/cars">Coches en venta</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/login">Iniciar sesión</a>
         </li>
         <li class="nav-item">
