add delete user button and some styles

--- a/views/profile/profile-edit.hbs
+++ b/views/profile/profile-edit.hbs
@@ -34,6 +34,7 @@
         </div>
          <button type="submit" class="btn btn-dark">Guardar edición</button>
         <a href="/profile" class="btn btn-dark">Volver</a>
+        <a href="/profile/delete/{{editUser._id}}" class="btn btn-dark">Eliminar</a>
 
       </form>
     </div>
