--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,4 +15,10 @@ h1, h2, h3 {
   padding: 10px 0;
   margin-top: 5px; }
 
+img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid red; }
+
 /*# sourceMappingURL=style.css.map */
