--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,6 +34,9 @@
         </li>
          <li class="nav-item">
           <a class="nav-link" href="/profile">Profile</a>
+        </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="/users">Usuarios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar sesión</a>
