minor changes to forum

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Inicio</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="/forum">Foro</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/login">Iniciar sesión</a>
         </li>
