--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -11,4 +11,4 @@
     <p>Número de teléfono: {{phoneNumber}}</p>
 
 
-<a href="/profile/edit/{{_id}}">Editar Usuario</a>
+<a href="/profile/edit/{{_id}}" class=" btn btn-dark">Editar Usuario</a>
