--- a/views/cars/cars-list.hbs
+++ b/views/cars/cars-list.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <div class="info">
 
-    <canvas id="myMap"></canvas>
+    <div id="myMap"></div>
 
     <h3>List of all cars</h3>
     <a href="/cars/create">Create new car</a>
@@ -23,8 +23,8 @@
     </ul>
 </div>
 
-{{!-- AXIOS   Y API GOOGLE MAPS   
+{{!-- AXIOS   Y API GOOGLE MAPS    --}}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/main.js"></script>
-<script src="/javascripts/mapStyles.js"> </script> --}}
-{{!-- <script src="https://maps.googleapis.com/maps/api/js?key=INSERTAR KEY&callback=initMap"></script>  --}}
+{{!-- <script src="/javascripts/mapStyles.js"> </script> --}}
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5zll-K3WnkRdKTRaRgbyeC_JkL76ygyM"></script>
