--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,4 +15,8 @@ h1, h2, h3 {
   padding: 10px 0;
   margin-top: 5px; }
 
+#myMap {
+  width: 100%;
+  height: 400px; }
+
 /*# sourceMappingURL=style.css.map */
