--- a/views/profile/profile-edit.hbs
+++ b/views/profile/profile-edit.hbs
@@ -9,12 +9,12 @@
           <input name="username" type="text" class="form-control" id="name-input" value="{{editUser.username}}">
         </div>
         <div class="form-group">
-          <label for="description-input">Email</label>
-          <input name="email" type="email" class="form-control" id="description-input" value="{{editUser.email}}">
+          <label for="email-input">Email</label>
+          <input name="email" type="email" class="form-control" id="email-input" value="{{editUser.email}}">
         </div>
         <div class="form-group">
-          <label for="inversions-input">Imagen de Perfil</label>
-          <input name="paco" type="file" class="form-control" id="inversions-input">
+          <label for="image-input">Imagen de Perfil</label>
+          <input name="paco" type="file" class="form-control" id="image-input">
         </div>
         <div class="form-group">
           <label for="age-input">Edad</label>
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
           <label for="dni-input">DNI</label>
-          <input name="dni" type="number" class="form-control" id="dni-input" value="{{editUser.dni}}">
+          <input name="dni" type="text" class="form-control" id="dni-input" value="{{editUser.dni}}">
         </div>
         <div class="form-group">
           <label for="phone-input">Número de teléfono</label>
