--- a/views/forum/forum-edit.hbs
+++ b/views/forum/forum-edit.hbs
@@ -1,1 +1,37 @@
-<h1>Editar Post</h1>
+
+<div class="container">
+
+  <div class="row">
+      <div class="col-md-6">
+
+            <h1>Editar Post</h1>
+      </div>
+
+    <div class="col-md-6">
+      <form action="/forum/edit/{{_id}}" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+          <label for="title-input">Title</label>
+          <input name="title" type="text" class="form-control" id="title-input" value="{{title}}">
+        </div>
+        <div class="form-group">
+          <label for="subtitle-input">Subtitle</label>
+          <input name="subtitle" type="text" class="form-control" id="subtitle-input" value="{{subtitle}}">
+        </div>
+        <div class="form-group">
+          <label for="comment-input">Comentario</label>
+          <input name="comment" type="text" class="form-control" id="comment-input" value="{{comment}}">
+        </div>
+        <div class="form-group">
+          <label for="img-input">Imágen</label>
+          <input name="paco" type="file" class="form-control" id="img-input" value="{{postPicPath}}" required>
+        </div>
+        <button type="submit" class="btn btn-dark">Guardar edición</button>
+        <a href="/forum" class="btn btn-dark">Volver</a>
+    </div>
+
+
+      </form>
+    </div>
+
+  </div>
+</div>
