--- a/views/forum/forum-list.hbs
+++ b/views/forum/forum-list.hbs
@@ -1,9 +1,18 @@
 <h1>Foro</h1>
 <a href="/forum/create" class=" btn btn-dark">Crear Post</a>
 
-
-{{#each allPost}}
-    <p>{{title}}</p>
-    <img src="{{postPicPath}}" alt="{{title}}">
-    <p>Hola</p>
-{{/each}}
+<div class="container">
+    <div class="row">
+            {{#each allPost}}
+                <div class="col-md-4">
+                        <h2>Titulo: {{title}}</h2>
+                        <img src="{{postPicPath}}" alt="{{title}}">
+                        <h4>Subtitulo: {{subtitle}}</h4>
+                        <p>Comentario: {{comment}}</p>
+                        <p>Usuario: {{creatorId.username}}</p>
+                        <a href="/forum/edit/{{_id}}" class="btn btn-dark">Editar Post</a>
+                        <a href="/forum/delete/{{_id}}" class="btn btn-dark">Borrar Post</a>
+                </div>
+            {{/each}}
+    </div>
+</div>
