--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
+  <title>{{pageName}}</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <a class="navbar-brand" href="/">{{title}}</a>
+    <a class="navbar-brand" href="/">{{pageName}}</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,6 +26,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Inicio</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Registro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Iniciar sesión</a>
+        </li>
          <li class="nav-item">
           <a class="nav-link" href="/forum">Foro</a>
         </li>
@@ -33,17 +39,14 @@
           <a class="nav-link" href="/cars">Coches en venta</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/login">Iniciar sesión</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/signup">Registro</a>
+          <a class="nav-link" href="/users">Usuarios</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="/profile">Profile</a>
         </li>   
         <li class="nav-item">
-          <a class="nav-link" href="/users">Usuarios</a>
-        </li>
+          <a class="nav-link" href="/about-us">Con?cenos</a>
+        </li>   
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar sesión</a>
         </li>   
