--- a/views/forum/forum-list.hbs
+++ b/views/forum/forum-list.hbs
@@ -6,7 +6,7 @@
             {{#each allPost}}
                 <div class="col-md-4">
                         <h2>Titulo: {{title}}</h2>
-                        <img src="{{postPicPath}}" alt="{{title}}">
+                        <img class="profile" src="{{postPicPath}}" alt="{{title}}">
                         <h4>Subtitulo: {{subtitle}}</h4>
                         <p>Comentario: {{comment}}</p>
                         <p>Usuario: {{creatorId.username}}</p>
