--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,45 @@
 <h1>{{pageName}}</h1>
 <p>Bienvenido a {{pageName}}</p>
 
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/images/Banner01.jpg" class="d-block w-100" alt="Foto coche">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/Banner02.jpeg" class="d-block w-100" alt="Foto coche">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/Banner03.jpeg" class="d-block w-100" alt="Foto coche">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/Banner04.png" class="d-block w-100" alt="Foto coche">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 <div class="container">
     <div class="row justify-content-center">
         {{#each cars}}
             <div class="col-md-6 index-view">
-                <img src="{{carImagePath}}" alt="{{brand}}">
+                <img class="profile" src="{{carImagePath}}" alt="{{brand}}">
                 <p><strong>Marca:</strong> {{brand}}</p>
                 <p><strong>Modelo:</strong> {{model}}</p>
-                <p><strong>Año de construcción:</strong> {{manufacturingYear}}</p>
+                <p><strong>Año de Fabricacion:</strong> {{manufacturingYear}}</p>
                 <p><strong>Descripción:</strong> {{description}}</p>
                 <p><strong>Usuario:</strong> {{creatorId.username}}</p>
                 <p><strong>Precio:</strong> {{price}}</p>
                 <p><strong>Estado:</strong> {{adStatus}}</p>
-                <a href="/cars" class="btn btn-dark">Todos los coches</a>
+                <a href="/cars" class="btn btn-dark">Ver Detalles</a>
 
             </div>
         {{/each}}
@@ -27,7 +53,7 @@
         {{#each posts}}
             <div class="col-md-6">
                 <p><strong>Usuario:</strong>{{creatorId.username}}</p>
-                <img src="{{postPicPath}}" alt="{{creatorId.username}}">
+                <img class="profile" src="{{postPicPath}}" alt="{{creatorId.username}}">
                 <p><strong>Titulo:</strong>{{title}}</p>
                 <p><strong>Subtitulo:</strong>{{subtitle}}</p>
                 <p><strong>Comentario:</strong>{{comment}}</p>
