add upload car image

--- a/views/cars/cars-create.hbs
+++ b/views/cars/cars-create.hbs
@@ -22,10 +22,10 @@
                     <label for="model-input">Modelo</label>
                     <input name="model" type="text" class="form-control" id="model-input">
                 </div>
-                {{!-- <div class="form-group">
+                <div class="form-group">
                     <label for="picture-input">Imagen</label>
-                    <input name="pepe" type="file" class="form-control" id="picture-input">
-                </div> --}}
+                    <input name="imgPathForm" type="file" class="form-control" id="picture-input">
+                </div>
                 <div class="form-group">
                     <label for="manufacturingYear-input">Feacha de primera matriculación</label>
                     <input name="manufacturingYear" type="date" class="form-control" id="manufacturingYear-input">
