--- a/views/cars/cars-detail.hbs
+++ b/views/cars/cars-detail.hbs
@@ -4,6 +4,7 @@
 
         <div class="col-md-6">
             <h1 style="font-weight: 100">{{brand}} | {{model}}</h1>
+            <figure><img src="{{profilePicPath}}"></figure>
         </div>
 
         <div class="col-md-6">
