--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,18 +30,12 @@
 <div class="container">
     <div class="row justify-content-center">
         {{#each cars}}
-            <div class="col-md-6 index-view">
+            <a href="/cars/{{_id}}/details" class="col-md-5 index-view card">
                 <img class="profile" src="{{carImagePath}}" alt="{{brand}}">
-                <p><strong>Marca:</strong> {{brand}}</p>
-                <p><strong>Modelo:</strong> {{model}}</p>
-                <p><strong>Año de Fabricacion:</strong> {{manufacturingYear}}</p>
-                <p><strong>Descripción:</strong> {{description}}</p>
-                <p><strong>Usuario:</strong> {{creatorId.username}}</p>
-                <p><strong>Precio:</strong> {{price}}</p>
-                <p><strong>Estado:</strong> {{adStatus}}</p>
-                <a href="/cars" class="btn btn-dark">Ver Detalles</a>
-
-            </div>
+                <p><strong>Marca: </strong> {{brand}}</p>
+                <p><strong>Modelo: </strong> {{model}}</p>
+                <p><strong>Año de Fabricacion: </strong> {{manufacturingYear}}</p>
+            </a>
         {{/each}}
 
     </div>
@@ -49,15 +43,14 @@
 <hr>
 
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
         {{#each posts}}
-            <div class="col-md-6">
-                <p><strong>Usuario:</strong>{{creatorId.username}}</p>
+            <div class="col-md-4">
+                <p><strong>Usuario: </strong>{{username}}</p>
                 <img class="profile" src="{{postPicPath}}" alt="{{creatorId.username}}">
-                <p><strong>Titulo:</strong>{{title}}</p>
-                <p><strong>Subtitulo:</strong>{{subtitle}}</p>
-                <p><strong>Comentario:</strong>{{comment}}</p>
-
+                <p><strong>Titulo: </strong>{{title}}</p>
+                <p><strong>Subtitulo: </strong>{{subtitle}}</p>
+                <p><strong>Comentario: </strong>{{comment}}</p>
             </div>
         {{/each}}
 
