--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -49,3 +49,36 @@ h1, h2, h3 {
     border:none;
   }
 }
+.card{
+  margin: 10px;
+  text-decoration: none;
+  color:black;
+  box-shadow: 0px -25px 107px -56px rgba(138, 138, 138, 1);
+  transition: .3s all;
+  p{
+    margin:0;
+  }
+}
+.card:hover{
+  transform: scale(1.01);
+  text-decoration: none;
+  color:black;
+}
+footer{
+  background-color:rgba(138, 138, 138, .5);
+  text-align:center;
+  padding: 30px 0;
+  margin-top: 50px;
+}
+figure img{
+  width:100%;
+}
+.profile-car-img{
+  width: 100%;
+  margin: 10px 0;
+  transition: .3s all;
+}
+.profile-car-img:hover{
+  transform: scale(.98);
+  filter: grayscale(70%);
+}
