--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,9 +38,6 @@
         <li class="nav-item">
           <a class="nav-link" href="/cars">Coches en venta</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/users">Usuarios</a>
-        </li>
          <li class="nav-item">
           <a class="nav-link" href="/profile">Perfil</a>
         </li>   
@@ -58,6 +55,9 @@
   <main class="container">
     {{{body}}}
   </main>
+
+
+<footer>Site made with Love by Social Motors &#64; 2020</footer>
 
   <script src="/javascripts/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
