--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -2,18 +2,22 @@
     <div class="row">
         <div class="col-md-6">
 
-            <h1>Welcome, {{username}}! </h1>
+            <h1>Bienvenido, {{users.username}}! </h1>
 
-            <p>Email: {{email}}</p>
+            <p>Email: {{users.email}}</p>
             <p>Foto de Perfil: </p>
-            <img class="profile" src="{{profilePicPath}}">
-            <p>Edad: {{age}}</p>
-            <p>Dirección: {{address}}</p>
-            <p>DNI: {{dni}}</p>
-            <p>Número de teléfono: {{phoneNumber}}</p>
+            <img class="profile" src="{{users.profilePicPath}}">
+            <p>Edad: {{users.age}}</p>
+            <p>Dirección: {{users.address}}</p>
+            <p>DNI: {{users.dni}}</p>
+            <p>Número de teléfono: {{users.phoneNumber}}</p>
+            <a href="/profile/edit/{{_id}}" class=" btn btn-dark">Editar Usuario</a>
         </div>
-
-
+        <div class="col-md-6">
+            <h1>Mis coches</h1>
+            {{#each cars}}
+                <a href="/cars/{{_id}}/details"><img class="profile-car-img" src="{{carImagePath}}" alt=""></a>
+            {{/each}}
+        </div>
     </div>
-    <a href="/profile/edit/{{_id}}" class=" btn btn-dark">Editar Usuario</a>
 </div>
