--- a/views/profile/users-list.hbs
+++ b/views/profile/users-list.hbs
@@ -6,7 +6,7 @@
         <div class="col-md-4">
 
             <p>Nombre de Usuario: {{username}}</p>
-            <img src="{{profilePicPath}}" alt="{{username}}">
+            <img class="profile" src="{{profilePicPath}}" alt="{{username}}">
             <p>Número de teléfono: {{phoneNumber}}</p>
 
         </div>
