--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,4 +75,13 @@ figure img {
   transform: scale(0.98);
   filter: grayscale(70%); }
 
+.carousel-item {
+  height: 400px;
+  margin-bottom: 30px; }
+
+.carousel-item img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain; }
+
 /*# sourceMappingURL=style.css.map */
