--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -82,3 +82,12 @@ figure img{
   transform: scale(.98);
   filter: grayscale(70%);
 }
+.carousel-item{
+  height: 400px;
+  margin-bottom: 30px;
+}
+.carousel-item img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
