--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,7 @@ h1, h2, h3 {
 
 .old-car {
   width: 500px;
-  margin: 0 auto; }
+  margin: 20px auto; }
   .old-car img {
     border: none;
     border-radius: 0;
@@ -83,5 +83,13 @@ figure img {
   height: 100%;
   width: 100%;
   object-fit: contain; }
+
+.about-us {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .about-us p {
+    margin: 15px 0; }
 
 /*# sourceMappingURL=style.css.map */
