--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -1,8 +1,7 @@
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-8">
-            <h1>Bienvenido a social Motors</h1>
-            <h3>Esta es nuestra historia</h3>
+        <div class="col-md-8 about-us">
+            <h1>Esta es nuestra historia</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse facere, repudiandae quos odit quidem veritatis saepe quasi odio aspernatur a ipsum similique accusantium provident molestiae ad atque. Nobis, delectus perferendis.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse facere, repudiandae quos odit quidem veritatis saepe quasi odio aspernatur a ipsum similique accusantium provident molestiae ad atque. Nobis, delectus perferendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus recusandae atque officiis quo deserunt minima fuga quaerat porro, nulla laboriosam pariatur quidem. Eligendi, expedita et enim iste architecto ut nulla.</p>
             <div class="old-car">
