--- a/views/cars/cars-create.hbs
+++ b/views/cars/cars-create.hbs
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <label for="manufacturingYear-input">Feacha de primera matriculación</label>
-                    <input name="manufacturingYear" type="date" class="form-control" id="manufacturingYear-input">
+                    <input name="manufacturingYear" type="month" class="form-control" id="manufacturingYear-input">
                 </div>
                 <div class="form-group">
                     <label for="plate-input">Matricula</label>
