--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -5,18 +5,19 @@
             <h1>Bienvenido, {{users.username}}! </h1>
 
             <p>Email: {{users.email}}</p>
-            <p>Foto de Perfil: </p>
-            <img class="profile" src="{{users.profilePicPath}}">
+            <p>Foto de Perfil: <img class="profile" src="{{users.profilePicPath}}"></p>
+            
             <p>Edad: {{users.age}}</p>
             <p>Dirección: {{users.address}}</p>
             <p>DNI: {{users.dni}}</p>
             <p>Número de teléfono: {{users.phoneNumber}}</p>
-            <a href="/profile/edit/{{_id}}" class=" btn btn-dark">Editar Usuario</a>
+            <a href="/profile/edit/{{users._id}}" class=" btn btn-dark">Editar Usuario</a>
         </div>
+
         <div class="col-md-6">
             <h1>Mis coches</h1>
             {{#each cars}}
-                <a href="/cars/{{_id}}/details"><img class="profile-car-img" src="{{carImagePath}}" alt=""></a>
+                <a href="/cars/{{_id}}/details"><img class="profile-car-img" src="{{carImagePath}}" alt="{{users.username}}"></a>
             {{/each}}
         </div>
     </div>
